--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "nodemon api/index.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.3"
   }
 }
